Update security settings and environment configuration